[package]
version = "0.1.0"
name = "mediarecorder"
authors = ["Your Name <email@address.com>"]
description = "Test accessing JS MediaRecorder."
categories = ["experimental"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
seed = "0.7"
wasm-bindgen-futures = "0.4"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[dependencies.web-sys]
version = "0.3.40"
features = [
  "MediaDevices",
  "MediaRecorder",
  "MediaRecorderOptions",
  "MediaStream",
  "MediaStreamConstraints",
  "Navigator",
  "Window",
]
