[package]
version = "0.1.0"
name = "mediarecorder"
authors = ["Your Name <email@address.com>"]
description = "Test accessing JS MediaRecorder."
categories = ["experimental"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"


[dependencies]
# There are some fixed bugs in `master`. `master` is also the most stable Seed version.
seed = "0.7"
wasm-bindgen-futures = "0.4"
gloo-file = { version = "0.1.0", features = ["futures"] }

[dependencies.web-sys]
version = "0.3.40"
features = [
  "Blob",
  "BlobEvent",
  "MediaDevices",
  "MediaRecorder",
  "MediaRecorderOptions",
  "MediaStream",
  "MediaStreamConstraints",
  "Navigator",
  "Window",
]


[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
